@@ -371,3 +371,13 @@ in a view widget.
 @marker: 
 
 
+<!-- ##### FUNCTION gtk_source_buffer_ensure_highlight ##### -->
+<para>
+
+</para>
+
+@buffer: 
+@start: 
+@end: 
+
+
